--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,9 +22,6 @@ jobs:
         with:
           command: clippy
           args: --all-targets --all-features
-      - uses: jetli/trunk-action@v0.5.0
-        with:
-          version: 'latest'
       - name: Execute CLI command
         run: |
-          trunk build
+          cargo install trunk
