--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,9 @@ on:
 # Make sure CI fails on all warnings, including Clippy lints
 env:
   RUSTFLAGS: "-Dwarnings"
+  AWS_DEFAULT_REGION: "us-west-2"
+  S3_BUCKET: "yew-ascii-generator"
+
 
 jobs:
   build_and_test:
@@ -31,3 +34,11 @@ jobs:
       - name: Trunk build
         run: |
           trunk build
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_DEFAULT_REGION }}
+      - name: Deploy app build to S3 bucket
+        run: aws s3 sync ./dist/ s3://${{ env.S3_BUCKET }} --delete
