--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,8 +2,6 @@ name: Push Event Workflow
 
 on:
   push:
-    branches-ignore:
-      - main
 
 # Make sure CI fails on all warnings, including Clippy lints
 env:
@@ -40,5 +38,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
-      - name: Deploy app build to S3 bucket
+      - name: Deploy files to S3 bucket
+        if: github.event.pull_request.merged == true
         run: aws s3 sync ./dist/ s3://${{ env.S3_BUCKET }} --delete
